# urdf2usd

./: Cargo.toml  Makefile  PROJECT  README.md
crates/urdf2usd-cli/: Cargo.toml
crates/urdf2usd-cli/src/: main.rs
crates/usd_schemas/: Cargo.toml
crates/usd_schemas/src/: geom.rs  lib.rs  math.rs  physics.rs  shade.rs  tokens.rs  xform.rs
examples/: urdf_viewer.rs  usd_viewer.rs  view_roundtrip.rs  viewer.rs
examples/_shared/: urdf_app.rs  usd_app.rs
src/: hierarchy.rs  lib.rs  opts.rs  resolve.rs  to_usdc.rs  tolerate.rs  undefined.rs  usdz.rs
src/math/: inertia.rs  mod.rs  rpy.rs
src/to_urdf/: mod.rs  read.rs
src/to_usd/: dae.rs  joints.rs  links.rs  materials.rs  meshes.rs  mod.rs  names.rs  scene.rs  textures.rs
tests/: roundtrip.rs
