[workspace]
members = ["crates/urdf2usd-cli"]

[package]
name = "urdf2usd"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Library for converting URDF robot descriptions into OpenUSD assets (and back)."

[dependencies]
# URDF parser: full serde-derived model of the URDF XML schema.
urdf-rs = "0.9"

# Pure-Rust USD writer (.usda / .usdc / .usdz). No crate on crates.io yet,
# writers landed on main recently.
openusd = { git = "https://github.com/mxpv/openusd", branch = "main" }

# Schema-authoring helpers that sit between `openusd` and us. Originally
# extracted from this repo, now grown into a much richer crate inside
# `bevy_openusd` (added camera / light / skel / anim / nurbs / curves /
# typed readers). We consume that canonical version; the local
# `crates/usd_schemas/` was deleted to avoid drift. When `bevy_openusd`
# starts publishing to crates.io / mxpv accepts the upstream PR, swap
# the path dep for the registry one.
usd_schemas = { path = "../bevy_openusd/crates/usd_schemas" }

# STL / OBJ / DAE parser used by urdf-viz. Handles all three formats that
# URDF `<mesh filename="...">` can reference. mesh-loader hides per-face
# material ids (material_index is pub(crate)), so we use it for STL/DAE and
# fall back to `tobj` for OBJ when we want per-material GeomSubsets.
mesh-loader = "0.1.6"
tobj = "4"

# Symmetric eigendecomposition for the 3x3 inertia tensor -> diagonalInertia
# + principalAxes (UsdPhysics.MassAPI).
nalgebra = "0.33"

# Streaming XML rewriter. We preprocess URDF text to inject missing-but-required
# attributes (material names, limit velocities) that urdf-rs rejects but real-
# world URDFs commonly omit. Same version urdf-rs itself pulls in transitively.
quick-xml = "0.36"

# Error plumbing. `anyhow` matches openusd's own error style at the boundary;
# `thiserror` is used for our typed library errors.
anyhow = "1"
thiserror = "2"

# Dev deps drive the example viewer that converts a URDF and renders the
# resulting USD natively in Bevy.
#
# - `bevy_openusd` provides the `UsdPlugin` + `UsdAsset` asset pipeline.
# - `bevy_glacial` provides the world chrome — chase camera with mouse
#   pan / orbit / zoom, an LOD ground grid that follows the camera, and
#   an axis-triad gizmo to show world orientation.
#
# Bevy feature union here = the union `bevy_openusd` and `bevy_glacial`
# need, so cargo's feature unification builds Bevy once across all three.
[dev-dependencies]
bevy_openusd = { path = "../bevy_openusd" }
bevy_glacial = { git = "https://github.com/bresilla/bevy_glacial" }
# Pure URDF → Bevy library. The `urdf_viewer` example uses it to
# render URDF directly (no conversion, no USD), so the same UI shell
# as `viewer` (Joints / Overlays / Tree panes via Frost, Glacial
# camera/gizmos/grid) can be pointed at native URDF for comparison.
# Pinned by rev so a downstream consumer of the example doesn't move
# under us when bevy_urdf's main branch advances.
bevy_urdf = { git = "https://github.com/bresilla/bevy_urdf.git", rev = "3c9e0e8" }
# UI for the viewer — glass-themed editor kit on top of egui. Provides
# the floating panels, ribbons, and gallery widgets (`toggle`,
# `pretty_slider`, `tree_row`) we use to build the joints / overlays /
# selection panels.
bevy_frost = { git = "https://github.com/bresilla/bevy_frost.git", package = "bevy_frost" }
bevy_egui = { version = "0.39", default-features = false, features = [
    "default_fonts",
    "render",
] }
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_state",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "bevy_input_focus",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_light",
    "bevy_mesh",
    "bevy_camera",
    "bevy_image",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_picking",
    "bevy_scene",
    "default_font",
    "tonemapping_luts",
    "smaa_luts",
    "ktx2",
    "zstd_rust",
    "png",
    "x11",
    "reflect_auto_register",
] }

[[example]]
name = "viewer"
path = "examples/viewer.rs"
